ZFIN-8629 small refactoring